--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,18 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.4",
-        "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*",
-        "janisto/yii2-environment": "~1.1.1"
+        "yiisoft/yii2": "~2.0.4",
+        "yiisoft/yii2-bootstrap": "~2.0.4",
+        "yiisoft/yii2-swiftmailer": "~2.0.4",
+        "yiisoft/yii2-twig": "~2.0.4",
+        "janisto/yii2-environment": "~1.1.1",
+        "rmrevin/yii2-fontawesome": "~2.11.0"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-codeception": "~2.0.4",
+        "yiisoft/yii2-debug": "~2.0.4",
+        "yiisoft/yii2-gii": "~2.0.4",
+        "yiisoft/yii2-faker": "~2.0.3"
     },
     "config": {
         "process-timeout": 1800
