--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
+    "name": "miramir/dnb",
+    "description": "Сайт проекта Дети Наше Будущее",
     "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "homepage": "http://dnb.is74.ru/",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "MIT",
     "support": {
         "issues": "https://github.com/yiisoft/yii2/issues?state=open",
         "forum": "http://www.yiiframework.com/forum/",
@@ -45,10 +45,10 @@
                     "web/assets": "0777",
                     "yii": "0755"
                 }
-            ],
-            "generateCookieValidationKey": [
-                "config/web.php"
             ]
+//            ,"generateCookieValidationKey": [
+//                "config/web.php"
+//            ]
         },
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
