Доработал схему развёртывания среды разработки.

--- a/docker/nginx-vhost.conf
+++ b/docker/nginx-vhost.conf
@@ -5,7 +5,7 @@ server {
 
 	listen 80 default;
 	server_name dnb.dev;
-	root		/var/www/dnb/web;
+	root		/var/www/www-data/web;
 	index		$yii_bootstrap;
 
 	location / {
